Bug 344878 - Double click doesn't instert new path point (wacom stylus)
Summary: Double click doesn't instert new path point (wacom stylus)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (show other bugs)
Version: 2.9
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-05 18:12 UTC by Danilo JR
Modified: 2017-03-29 11:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Danilo JR 2015-03-05 18:12:33 UTC
I have noted that double click (double tap) with wacom stylus doesn't insert new path point  on path in the vector layer.  It only works with mouse double click. I tested it in linux and windows and I get the same issue.

ps: Double tap  with stylus is working  normally on my system. I can open folders, files and so on.

specs:

Krita stable 2.9.0 (x64)

SO's:

Linux Mint 17.1 (rebecca) with nvidia drivers (331.113) (x64)

Windows 7 Ultimate sp1 (x64)

Hardware
core i7, 16gb ram, quadro fx1800

wacom intuos4 ptk-640

thanks (sorry my english)
Comment 1 mvowada 2015-06-27 11:47:08 UTC
I can confirm with a wacom intuos 4 - grip pen.
Tested with the latest version of Krita: 2.9.5 (git 9fe0557) - Ubuntu 14.04, Unity.
Comment 2 Kyle UX (chez Tinderbox) 2015-11-23 00:30:30 UTC
I am able to double click with a Wacom stylus to rename layers in Krita, so some double click functionality is supported. Below is the list of working and non-working double click features I have found so far.

Double click functionality working for BOTH mouse and stylus:
- Double click a layer to rename it.

Double click functionality working for a mouse, but NOT a stylus:
- Double click on a Vector object to enter path editing mode.
- Double click outside the bounds of a Vector object to exit path editing mode.
- Double click a Multiline Text object to enter text editing mode.
- Double click outside the bounds of a Multiline Text object to exit text editing mode.
- Double click an Artistic Text object to enter text editing mode.

Double click functionality working for NEITHER mouse nor stylus:
- Double click outside the bounds of an Artistic Text object to exit text editing mode.
Comment 3 Dmitry Kazakov 2017-03-21 06:38:29 UTC
Git commit 259d5f8253da02717ca5e985e0b979c8a15e3165 by Dmitry Kazakov.
Committed on 20/03/2017 at 16:55.
Pushed by dkazakov into branch 'kazakov/svg-loading'.

Fix right-button popup menus in tools when using Tablet Stylus

M  +30   -2    libs/ui/input/kis_show_palette_action.cpp
M  +1    -0    libs/ui/input/kis_show_palette_action.h

https://commits.kde.org/krita/259d5f8253da02717ca5e985e0b979c8a15e3165
Comment 4 Dmitry Kazakov 2017-03-21 07:00:50 UTC
The bug should be fixed in my branch now. Double-clicking on canvas is not supported without huge refactorings, so now all the actions are mapped to the right-button context menu.
Comment 5 Dmitry Kazakov 2017-03-29 11:28:00 UTC
Git commit 5111088c461ef8bafa98d9ffdb9569ba6198dd8e by Dmitry Kazakov.
Committed on 29/03/2017 at 11:02.
Pushed by dkazakov into branch 'krita/3.1'.

Fix right-button popup menus in tools when using Tablet Stylus

M  +31   -2    libs/ui/input/kis_show_palette_action.cpp
M  +1    -0    libs/ui/input/kis_show_palette_action.h

https://commits.kde.org/krita/5111088c461ef8bafa98d9ffdb9569ba6198dd8e