Make it possible to operate with path points using right-button menu

Double-clicking is not possible with stylus (at least without
big refactorings of the strategies frameworks), so this patch implements
right-clicking actions for the path objects.

BUG:344878